syntax = "proto3";
package channelBuilder;

message Message {
  oneof type {
    Negotiation negotiation = 1;
    bytes connectionRequest = 2;
    bool connectionResponse = 3;
  }
}

message Negotiation {
  Info initiator = 1;
  Info passive = 2;
}

message Info {
  uint32 id = 1;
  string wss = 2;
  uint32 wcId = 3;
  bool wsSupported = 4;
  bool wsTried = 5;
  bool dcSupported = 6;
  bool dcTried = 7;
}
